--- a/questions/jwpc2021.md
+++ b/questions/jwpc2021.md
@@ -17,7 +17,7 @@
 - 14.1-2. [不連続な隣人](../puzzle/fillomino-nonconsective.md)
 - 15.1-2. [同側ループ](../puzzle/dosokuloop.md)
 - 16.1-2. [ダブル・ボンバーパズル](../puzzle/minesweeper-double.md)
-- 17.1-2. [注文の多いABCプレース](../puzzle/esayas-v1.md)
+- 17.1-2. [注文の多いABCプレース](../puzzle/esayas-whatnumber.md)
 - 18.1-2. [嘘つきスネーク](../puzzle/snake-offbyone.md)
 - 19.1-2. [LITSO](../puzzle/litso.md)
 - 20.1-2. [Cave](../puzzle/cave.md)
