--- a/questions/jwpc2017.md
+++ b/questions/jwpc2017.md
@@ -4,7 +4,7 @@
 - 1\. [吉例クロスマッス](../puzzle/arithmeticsquare.md)
 - 2\. [ボンバーパズル](../puzzle/minesweeper.md)
 - 3\. [Myopia バトルシップ](../puzzle/myopia-battleships.md)
-- 4\. [なわばりプレース](../puzzle/capsules.md)
+- 4\. [なわばりプレース](../puzzle/rippleeffect.md)
 - 5\. [数字つなぎ](../puzzle/numberconnection.md)
 - 6\. [スターバトル](../puzzle/starbattle.md)
 - 7\. [シークワーズ](../puzzle/wordsearch.md)
